--- a/index.html
+++ b/index.html
@@ -8,32 +8,23 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" media="all">
 </head>
 <body style="font-family: Poppins">
+    
     <style>
-      html, body { padding: 0; margin: 0; width: 100%; height: 100%; }
-      * {box-sizing: border-box;}
-      body { text-align: center; padding: 0; background: #d6433b; color: #fff;}
-      h1 { font-size: 50px; font-weight: 100; text-align: center;}
-      body { 
-        font-family: Open Sans; 
-        font-weight: 100; font-size: 20px; 
-        color: #fff; text-align: center; 
-        display: -webkit-box; 
-        display: -ms-flexbox; 
-        display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
-        .container { width: 100%; max-width: 600px; }
-      a { color: #fff; font-weight: bold;}
-      a:hover { text-decoration: none; }
-      svg { width: 75px; margin-top: 1em; }
+   /* Pop-Up Box by Fineshop */.popSc{position:fixed;z-index:99999;top:0;bottom:0;left:0;right:0;padding:20px;background:#f3f5fe;display:flex;justify-content:center;align-items:center}.popSc.hidden{display:none}
+.popSc .popBo{position:relative;background:#fff;max-width:400px;display:flex;justify-content:center;align-items:center;flex-direction:column;padding:30px;border-radius:30px}
+.popSc .popBo svg{display:block;width:50px;height:50px;fill:none !important;stroke:#08102b;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5}
+.popSc .popBo h2{margin:10px 0 15px 0;font-size:1.2rem;font-weight:800;color:#08102b}
+.popSc .popBo p{margin:0;line-height:1.7em;font-size:0.9rem;color:#08102b}
+
     </style>
     
-    <div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 202.24 202.24"><defs><style>.cls-1{fill:#fff;}</style></defs><title>Asset 3</title><g id="Layer_2" data-name="Layer 2"><g id="Capa_1" data-name="Capa 1"><path class="cls-1" d="M101.12,0A101.12,101.12,0,1,0,202.24,101.12,101.12,101.12,0,0,0,101.12,0ZM159,148.76H43.28a11.57,11.57,0,0,1-10-17.34L91.09,31.16a11.57,11.57,0,0,1,20.06,0L169,131.43a11.57,11.57,0,0,1-10,17.34Z"/><path class="cls-1" d="M101.12,36.93h0L43.27,137.21H159L101.13,36.94Zm0,88.7a7.71,7.71,0,1,1,7.71-7.71A7.71,7.71,0,0,1,101.12,125.63Zm7.71-50.13a7.56,7.56,0,0,1-.11,1.3l-3.8,22.49a3.86,3.86,0,0,1-7.61,0l-3.8-22.49a8,8,0,0,1-.11-1.3,7.71,7.71,0,1,1,15.43,0Z"/></g></g></svg>
-        <h1>We&rsquo;ll be back soon!</h1>
-        <div>
-            <p>Sorry for the inconvenience. We&rsquo;re performing some maintenance at the moment. we&rsquo;ll be back up shortly!</p>
-            <p>&copy; </p>
-        </div>
-    </div>
+    <div class="popSc" id="antiAdBlock">
+<div class="popBo">
+<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><line x1="12" x2="12" y1="8" y2="12"></line><line x1="12" x2="12.01" y1="16" y2="16"></line></svg>
+<h2>Ad-Blocker Detected!</h2>
+<p>Sorry, we detected that you have activated Ad-Blocker.<br>Please consider supporting us by disabling your Ad-Blocker, it helps us in developing this Website.<br>Thank you!</p>
+</div>
+</div>
 
 
 </body>
