--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body style="font-family: Poppins">
     
     <style>
-   /* Pop-Up Box by Fineshop */.popSc{position:fixed;z-index:99999;top:0;bottom:0;left:0;right:0;padding:20px;background:#f3f5fe;display:flex;justify-content:center;align-items:center}.popSc.hidden{display:none}
-.popSc .popBo{position:relative;background:#fff;max-width:400px;display:flex;justify-content:center;align-items:center;flex-direction:column;padding:30px;border-radius:30px}
-.popSc .popBo svg{display:block;width:50px;height:50px;fill:none !important;stroke:#08102b;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5}
-.popSc .popBo h2{margin:10px 0 15px 0;font-size:1.2rem;font-weight:800;color:#08102b}
-.popSc .popBo p{margin:0;line-height:1.7em;font-size:0.9rem;color:#08102b}
+   /* Site Maintenance */.maintenanceBg{position:fixed;z-index:99999;top:0;bottom:0;left:0;right:0;padding:20px;background:#f3f5fe;display:flex;justify-content:center;align-items:center}.popSc.hidden{display:none}
+.maintenanceBg .popBox{position:relative;background:#fff;max-width:400px;display:flex;justify-content:center;align-items:center;flex-direction:column;padding:30px;border-radius:30px}
+.maintenanceBg .popBox svg{display:block;width:50px;height:50px;fill:none !important;stroke:#08102b;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5}
+.maintenanceBg .popBox h2{margin:10px 0 15px 0;font-size:1.2rem;font-weight:800;color:#08102b}
+.maintenanceBg .popBox p{margin:0;line-height:1.7em;font-size:0.9rem;color:#08102b}
 
     </style>
     
-    <div class="popSc" id="antiAdBlock">
-<div class="popBo">
+    <div class="maintenanceBg" id="antiAdBlock">
+<div class="popBox">
 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><line x1="12" x2="12" y1="8" y2="12"></line><line x1="12" x2="12.01" y1="16" y2="16"></line></svg>
-<h2>Ad-Blocker Detected!</h2>
-<p>Sorry, we detected that you have activated Ad-Blocker.<br>Please consider supporting us by disabling your Ad-Blocker, it helps us in developing this Website.<br>Thank you!</p>
+<h2>Site Maintenance!</h2>
+<p>We're busy updating our site to give you the best experience, and will be back soon..<br>Thank you!</p>
 </div>
 </div>
 
