--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="font-family: Poppins">
     
     <style>
-   /* Site Maintenance */.maintenanceBg{position:fixed;z-index:99999;top:0;bottom:0;left:0;right:0;padding:20px;background:#f3f5fe;display:flex;justify-content:center;align-items:center}.popSc.hidden{display:none}
+   /* Site Maintenance */.maintenanceBg{position:fixed;z-index:99999;top:0;bottom:0;left:0;right:0;padding:20px;background:#f3f5fe;display:flex;justify-content:center;align-items:center}..maintenanceBg.hidden{display:none}
 .maintenanceBg .popBox{position:relative;background:#fff;max-width:400px;display:flex;justify-content:center;align-items:center;flex-direction:column;padding:30px;border-radius:30px}
 .maintenanceBg .popBox svg{display:block;width:50px;height:50px;fill:none !important;stroke:#08102b;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5}
 .maintenanceBg .popBox h2{margin:10px 0 15px 0;font-size:2.0rem;font-weight:800;color:#08102b}
