--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="popBox">
 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><line x1="12" x2="12" y1="8" y2="12"></line><line x1="12" x2="12.01" y1="16" y2="16"></line></svg>
 <h2>Site Maintenance!</h2>
-<p>We're busy updating our site to give you the best experience, and will be back soon..<br>Thank you!</p>
+<p>We're busy updating our site to give you the best experience, and will be back soon..Thank you!</p>
 </div>
 </div>
 
